fix overflow on mobile

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -27,3 +27,7 @@ footer {
 .underline {
     text-decoration: underline;
 }
+
+.table-condensed>tbody>tr>td {
+    padding: 1px;
+}
